# bigfix-proxyagent-servermon

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CONTRIBUTING.md  ProxyAgents.md  README.md  analysis-servermon.bes  ca-bundle.pem  pyproject.toml  servermon.toml  settings.json
.github/workflows/: misspell.yaml  pre-commit.yaml  tag_and_release.yaml
Inspectors/: servermon.inspectors
bigfix-content/: analysis-servermon.bes
bigfix/content/: ServerMon ProxyAgent_ Delete Virtual Device.bes  ServerMon ProxyAgent_ add url.bes  ServerMon ProxyAgent_ set refresh interval.bes  ServerMon ProxyAgent_ set url option.bes  analysis-servermon.bes
bigfix/reference-files/: ActionScript.schclass  LICENSE  ProxyAgents.md  ProxyPluginCommands.json  main.inspectors
plugin/: servermon.py
servermon/: __init__.py  _vendor.py  checker.py  cli.py  command.py  config.py  device.py  plugin.py  state.py  util.py
tests/: conftest.py  test_bootstrap.py  test_checker.py  test_cli.py  test_command.py  test_config.py  test_device.py  test_plugin.py  test_state.py  test_util.py  test_vendor.py
