[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigfix-proxyagent-servermon"
description = "BigFix Management Extender (Proxy Agent) plugin that monitors web server URLs as proxied devices"
keywords = ["bigfix", "proxy agent", "server monitoring"]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "JGStew", email = "noreply@jgstew.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jgstew/bigfix-proxyagent-servermon"

[project.scripts]
servermon = "servermon.cli:main"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.version]
path = "servermon/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["servermon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
