[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigfix-proxyagent-servermon"
description = "BigFix Management Extender (Proxy Agent) plugin that monitors web server URLs as proxied devices"
keywords = ["bigfix", "proxy agent", "server monitoring"]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "JGStew", email = "noreply@jgstew.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jgstew/bigfix-proxyagent-servermon"

[project.scripts]
servermon = "servermon.cli:main"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.version]
path = "servermon/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["servermon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=servermon --cov-report=term-missing --cov-fail-under=98"

# read by flake8 via the Flake8-pyproject plugin (see .pre-commit-config.yaml)
[tool.flake8]
select = ["B", "C", "E", "F", "P", "W", "B9"]
max-line-length = 88
extend-ignore = ["E203", "W503", "F401"]
### DEFAULT IGNORES FOR 4-space INDENTED PROJECTS ###
# E127, E128 are hard to silence in certain nested formatting situations.
# E203 doesn't work for slicing
# E265, E266 talk about comment formatting which is too opinionated.
# E402 warns on imports coming after statements. There are important use cases
# that require statements before imports.
# E501 is not flexible enough, we're using B950 instead.
# E722 is a duplicate of B001.
# P207 is a duplicate of B003.
# P208 is a duplicate of C403.
# W503 talks about operator formatting which is too opinionated.
ignore = ["E127", "E128", "E203", "E265", "E266", "E402", "E501", "E722", "P207", "P208", "W503"]
exclude = [".git", "__pycache__"]

[tool.pylint."messages control"]
disable = ["C0103", "C0209", "c-extension-no-member", "missing-function-docstring"]

[tool.pylint.format]
max-line-length = 88

[tool.codespell]
# PEM base64 blobs and logs are not prose
skip = "*.pem,./.git,./Logs"
